import Vector2D from './2D/Vector2D'

export default class Camera {
	public topLeft = new Vector2D(0.5, 0.5)
}
